Fixed the bug where Social panes gets unaligned in small screens

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header p {
     -moz-transition: background .5s;
     -o-transition:background .5s;
     width: 400px;
-    margin-right: 20px;
+    margin: 0 20px;
 }
 
 #Github:hover {
@@ -87,7 +87,7 @@ header p {
 }
 .Links {
     display: inline-block;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 .Links img {
